--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     api('com.github.chrisbanes.photoview:library:1.2.4'){
         exclude group: 'com.android.support'
     }
+    compileOnly "io.reactivex.rxjava2:rxjava:2.1.10"
+    compileOnly "io.reactivex.rxjava2:rxandroid:2.0.2"
 }
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
