--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -28,17 +32,13 @@ dependencies {
     compileOnly "io.reactivex.rxjava2:rxjava:2.1.10"
     compileOnly "io.reactivex.rxjava2:rxandroid:2.0.2"
 }
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    options.encoding = "UTF-8"
-}
+
 //publish {
 //    userOrg = 'cysion1989'
 //    groupId = 'com.cysion'
 //    artifactId = 'ImagePicker'
 //    repoName='maven'
-//    publishVersion = '1.0.0'
+//    publishVersion = '1.0.1'
 //    desc = '仿微信选择图片'
 //    website = 'https://**'
 //}
