适配Android X，修改recyclerview库和Support库以及PhotoView库

--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 //apply plugin: 'com.novoda.bintray-release'
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -24,9 +24,9 @@ android {
 
 dependencies {
     implementation  fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    api('com.github.chrisbanes.photoview:library:1.2.4'){
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    api('com.github.chrisbanes:PhotoView:2.3.0'){
         exclude group: 'com.android.support'
     }
     compileOnly "io.reactivex.rxjava2:rxjava:2.1.10"
