为发布andx做准备

--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -38,7 +38,7 @@ publish {
     groupId = 'com.cysion'
     artifactId = 'ImagePicker'
     repoName='maven'
-    publishVersion = '1.0.6.1'
+    publishVersion = '1.0.6.x'
     desc = '仿微信选择图片'
     website = 'https://**'
 }
