--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.0'
 
         //jcenter
-        classpath 'com.novoda:bintray-release:0.9'
+//        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
