--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.novoda.bintray-release'
 android {
     compileSdkVersion 28
 
@@ -38,7 +38,7 @@ dependencies {
 //    groupId = 'com.cysion'
 //    artifactId = 'ImagePicker'
 //    repoName='maven'
-//    publishVersion = '1.1.0.x'
+//    publishVersion = '1.0.8.x'
 //    desc = '仿微信选择图片'
 //    website = 'https://**'
 //}
