--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
         jcenter()
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         //jcenter
 //        classpath 'com.novoda:bintray-release:0.9.1'
     }
